# KHU_SENSOR_TEST

./: CMakeLists.txt  dut_data.cpp  dut_data.h  khu_sensor_test.pro  khu_sensor_test.pro.user.161ea86.20  mainwindow.cpp  mainwindow.h  mainwindow.ui
uart/: settingsdialog.ui
